--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,7 +64,7 @@ nav {
   height: 6.5rem; /*anterior era 7.813rem*/
   justify-content: space-around;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 1.25rem;
   background: #0f0c29;
   background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
   background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
@@ -98,9 +98,10 @@ ul li a:hover {
 
 /*logo Codo-Net*/
 .logo {
-  margin-left: -8rem;
+  margin-left:-8rem;
   width: 20rem;
 }
+
 
 nav input[type="checkbox"] {
   display: none;
@@ -123,7 +124,7 @@ nav label {
     background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
     background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
     padding: 1rem;
-    box-shadow: 0 2px 5px #00000033;
+    box-shadow: 0 0.125rem 0.313rem #00000033;
   }
 
   nav li {
@@ -164,7 +165,7 @@ nav label {
 .slider-frame {
   width: 100%;
   height: auto;
-  margin: 30px auto 0;
+  margin: 1.875rem auto 0;
   overflow: hidden;
 }
 
@@ -182,7 +183,7 @@ nav label {
 
 .slider-frame img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   box-shadow: 0.313rem 0.313rem 0.313rem #ffffffcc;
 }
 
@@ -226,7 +227,7 @@ nav label {
 .downloadApp {
   width: 106.75rem;
   height: 35.125rem;
-  background-color: #0082c8;
+  background-color: #4f5c63;
 }
 /*************************************************************************************/
 
@@ -237,8 +238,8 @@ nav label {
   grid-template-areas:
     "above above above"
     "left center right";
-  gap: 25px;
-  margin: 10px;
+  gap: 1.563rem;
+  margin: 0.625rem;
 }
 .grid-item {
   display: flex;
@@ -257,7 +258,7 @@ nav label {
   opacity: 0.6;
 }
 .above h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 /* Estilos para pantallas pequeñas */
 @media only screen and (max-width: 768px) {
@@ -270,9 +271,37 @@ nav label {
   }
 }
 
+
+/*estilos de la ilustracion de la izquierda*/
 .left {
-  /*estilos de la ilustracion de la izquierda*/
   grid-area: left;
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    #eaf9f9ab 0.1%,
+    #eff9fba1 90.1%
+  );
+  text-align: center;
+  text-shadow: #f5f5f5 0.1em 0.1em 0.1em;
+  box-shadow: 0.425rem 0.213rem 0.213rem #ffffff60;
+  border-radius: 0.625rem;
+  cursor: pointer;
+  transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
+}
+
+ /*con el hover cambia de color la imagen al pasar con el mouse*/
+.left:hover {
+   background-image: linear-gradient(
+    76.3deg,
+    #2c3e4e 12.6%,
+    #456783 82.8%
+  );
+  transform: scale(1.1);
+  transition: 1s;
+}
+
+ /*estilos de la ilustracion del centro*/
+.center {
+  grid-area: center;
   background-image: radial-gradient(
     circle farthest-corner at 10% 20%,
     #eaf9f9ab 0.1%,
@@ -281,34 +310,7 @@ nav label {
   text-align: center;
   text-shadow: whitesmoke 0.1em 0.1em 0.1em;
   box-shadow: 0.425rem 0.213rem 0.213rem #ffffff60;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
-}
-
-.left:hover {
-  /*con el hover cambia de color la imagen al pasar con el mouse*/
-  background-image: linear-gradient(
-    76.3deg,
-    rgba(44, 62, 78, 1) 12.6%,
-    rgba(69, 103, 131, 1) 82.8%
-  );
-  transform: scale(1.1);
-  transition: 1s;
-}
-
-.center {
-  /*estilos de la ilustracion del centro*/
-  grid-area: center;
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgba(234, 249, 249, 0.67) 0.1%,
-    rgba(239, 249, 251, 0.63) 90.1%
-  );
-  text-align: center;
-  text-shadow: whitesmoke 0.1em 0.1em 0.1em;
-  box-shadow: 0.425rem 0.213rem 0.213rem rgba(255, 255, 255, 0.378);
-  border-radius: 10px;
+  border-radius: 0.625rem;
   cursor: pointer;
   transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
 }
@@ -316,25 +318,25 @@ nav label {
 .center:hover {
   background-image: linear-gradient(
     76.3deg,
-    rgba(44, 62, 78, 1) 12.6%,
-    rgba(69, 103, 131, 1) 82.8%
+    #2c3e4e 12.6%,
+    #456783 82.8%
   );
   transform: scale(1.1);
   transition: 1s;
 }
 
+ /*estilos de la ilustracion de la derecha*/
 .right {
-  /*estilos de la ilustracion de la derecha*/
   grid-area: right;
   background-image: radial-gradient(
     circle farthest-corner at 10% 20%,
-    rgba(234, 249, 249, 0.67) 0.1%,
-    rgba(239, 249, 251, 0.63) 90.1%
+    #eaf9f9ab 0.1%,
+    #eff9fba1 90.1%
   );
   text-align: center;
-  text-shadow: whitesmoke 0.1em 0.1em 0.1em;
-  box-shadow: 0.425rem 0.213rem 0.213rem rgba(255, 255, 255, 0.378);
-  border-radius: 10px;
+  text-shadow: #f5f5f5 0.1em 0.1em 0.1em;
+  box-shadow: 0.425rem 0.213rem 0.213rem #ffffff60;
+  border-radius: 0.625rem;
   cursor: pointer;
   transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
 }
@@ -342,8 +344,8 @@ nav label {
 .right:hover {
   background-image: linear-gradient(
     76.3deg,
-    rgba(44, 62, 78, 1) 12.6%,
-    rgba(69, 103, 131, 1) 82.8%
+    #2c3e4e 12.6%,
+    #456783 82.8%
   );
   transform: scale(1.1);
   transition: 1s;
@@ -364,22 +366,23 @@ nav label {
 /*en donde está el aviso del 5G*/
 .grid-advert {
   display: grid;
-  margin: 20px auto 20px auto;
+  margin: 1.25rem auto 1.25rem auto;
   align-items: center;
   text-align: center;
   grid-template-columns: 1fr 1fr auto;
   width: 90%;
-  height: 400px;
+  height: 25rem;
   background-image: linear-gradient(
     65.9deg,
-    rgba(85, 228, 224, 1) 5.5%,
-    rgba(75, 68, 224, 0.74) 54.2%,
-    rgba(64, 198, 238, 1) 55.2%,
-    rgba(177, 36, 224, 1) 98.4%
+    #55e4e0 5.5%,
+    #4b44e0bd 54.2%,
+    #40c6ee 55.2%,
+    #b124e0 98.4%
   );
-  color: white;
-  -webkit-text-stroke: 2px black; /*le agrega un borde al texto*/
-  border-radius: 20px;
+  color: #ffffff;
+  -webkit-text-stroke: 0.125rem #000000; /*le agrega un borde al texto*/
+  border-radius: 1.25rem;
+  
   font-family: "Lilita One", cursive;
   opacity: 0.8;
 }
@@ -400,44 +403,48 @@ nav label {
 /*cartelito de descarga de la app*/
 .grid-app {
   display: grid;
-  margin: 20px auto 20px auto;
+  margin: 1.25rem auto 1.25rem auto;
   background-color: #00dbde;
   background-color: #00dbde;
   background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
-  color: white;
-  -webkit-text-stroke: 1px black; /*le agrega un borde al texto*/
+  color: #ffffff;
+  -webkit-text-stroke: 0.063rem #000000; /*le agrega un borde al texto*/
   align-items: center;
   text-align: center;
   grid-template-columns: 1fr auto auto;
   width: 90%;
-  height: 250px;
-  border-radius: 20px;
+  height: 15.625rem;
+  border-radius: 1.25rem;
   font-family: "Lilita One", cursive;
   opacity: 0.8;
 }
 .grid-app img {
-  border-radius: 30px;
+  border-radius: 1.875rem;
+  border:0.063rem solid #000000;
+  margin-right: 2rem;
 }
 /**********************************************************************************************/
 
 /*aviso que dice "pedí tu chip"*/
 .grid-sim {
   display: grid;
-  margin: 20px auto 20px auto;
+  margin: 1.25rem auto 1.25rem auto;
   background-image: url(../img/fondo-papel-tapiz-colorido-borroso-vivo.jpg);
   color: #ffffff;
-  -webkit-text-stroke: 1px black; /*le agrega un borde al texto*/
+  -webkit-text-stroke: 0.063rem black; /*le agrega un borde al texto*/
   align-items: center;
   text-align: center;
   grid-template-columns: 1fr auto auto;
   width: 90%;
-  height: 250px;
-  border-radius: 20px;
+  height: 15.625rem;
+  border-radius: 1.25rem;
   font-family: "Lilita One", cursive;
   opacity: 0.8;
 }
 .grid-sim img {
-  border-radius: 30px;
+  border-radius: 1.875rem;
+  border:0.063rem solid #000000;
+  
 }
 /****************************************************************************************/
 
@@ -459,7 +466,7 @@ footer {
   background: #141e30;
   background: -webkit-linear-gradient(to right, #243b55e9, #141e30);
   background: linear-gradient(to right, #243b55ea, #141e30);
-  color: white;
+  color: #ffffff;
 }
 
 /*logo en el footer*/
@@ -478,7 +485,7 @@ footer {
 
 /*línea al final del footer*/
 .line {
-  border-top: 0.063rem solid white;
+  border-top: 0.063rem solid #ffffff;
   height: 0.125rem;
   padding: 0;
   margin: 0.125rem auto 0 auto;
@@ -519,19 +526,19 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 30px 10px;
+    padding: 1.875rem 0.625rem;
   }
 
   .group1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .group1 img {
     width: 100%;
-    max-width: 300px;
+    max-width: 18.75rem;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .group2,
@@ -540,20 +547,20 @@ footer {
   .group5 {
     width: 100%;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .group5 .app {
-    margin-top: 20px;
+    margin-top: 1.25rem;
   }
 
   .group5 .qrCode {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 1.25rem;
   }
 
   .line {
-    margin: 30px 0;
+    margin: 1.875rem 0;
   }
 
   .copyright {
