--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-image: linear-gradient(to right, #434343 0%, black 100%);
-  scroll-snap-type: y mandatory;
+  
 }
 
 /*Esto está comentado porque era el fondo anterior, ahora está con background de prueba oscuro*/
@@ -29,23 +29,27 @@ header {
   left: 0;
   z-index: 100;
   background-image: linear-gradient(to right, #434343 0%, #000000 100%);
-  scroll-snap-align: start;
+  transition: top 0.5s ease-in-out;
+  
 }
 
 /*Efecto typing en el comienzo de la página*/
-.title {
+ .title {
   width: 0;
   overflow: hidden;
   white-space: nowrap;
   font-size: 1.2rem;
   margin: 0 auto;
+  color:#c8bbbb;
+  text-shadow: #3535b5 0.1em 0.1em 0.1em;
+  
 
   border-right: 0.15em solid #18bdec;
   animation: typing 4s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
-}
+ }
 @keyframes typing {
   from {
-    width: 0;
+    width: 0%;
   }
   to {
     width: 35%;
@@ -55,7 +59,7 @@ header {
   0% {
     border-color: transparent;
   }
-}
+} 
 
 /*barra de navegacion*/
 nav {
@@ -68,12 +72,11 @@ nav {
   background: #0f0c29;
   background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
   background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-
   font-size: 1.2rem;
   color: #00ffff;
   box-shadow: 0.625rem 0.313rem 0.313rem #000000;
+ 
 }
-/*********************************************************************************/
 
 /*lista del menú de navegacion*/
 ul {
@@ -90,18 +93,43 @@ ul li {
 ul li a {
   color: #00ffff;
   text-decoration: none;
+  border: 1px solid #ffffff02;
 }
 
 ul li a:hover {
   color: #ffffff;
-}
+  background-color:#267ab22c;
+  border-radius: 5px;
+  }
 
-/*logo Codo-Net*/
+/*desplazamiento del menú en la barra de navegacion*/
+  .slide {
+    animation-duration: 3s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 57%;
+      
+    }
+    to {
+      margin-left: 0%;
+      }
+  }
+
+ /*logo Codo-Net*/
 .logo {
   margin-left:-8rem;
   width: 20rem;
+  cursor: pointer;
+  transition: 1s;
 }
 
+.logo:hover{
+  transform: scale(1.2);
+  transition: 0.5s;
+}
 
 nav input[type="checkbox"] {
   display: none;
@@ -159,7 +187,16 @@ nav label {
   .title {
     display: none;
   }
+  .slide{
+    animation-duration: .1s;
+    animation-name: slidein;
+  }
+    
 }
+
+  
+
+
 /*****************************************************************************/
 /*carrusel sin bootstrap que funciona y es automático*/
 .slider-frame {
@@ -187,11 +224,7 @@ nav label {
   box-shadow: 0.313rem 0.313rem 0.313rem #ffffffcc;
 }
 
-/*Un @keyframe es una regla en CSS que define los estilos específicos
-  de un elemento en diferentes momentos de una animación.
-  En una animación CSS, se especifican una serie de fotogramas clave (keyframes)
-  que describen cómo debe cambiar el aspecto del elemento 
-  en diferentes momentos de la animación. */
+
 @keyframes slide {
   0% {
     margin-left: 0;
@@ -221,7 +254,6 @@ nav label {
     margin-left: -300%;
   }
 }
-
 /*banner final del carrusel. Ideal ajustar las imagenes a 1708px x 562px
  o el equivalente en rem*/
 .downloadApp {
@@ -229,23 +261,8 @@ nav label {
   height: 35.125rem;
   background-color: #4f5c63;
 }
-/*************************************************************************************/
 
-/*contenido de la página en donde estan las ilustraciones*/
-.grid-container {
-  display: grid;
-  grid-template: 4.25rem 20rem / 1fr 1fr 1fr;
-  grid-template-areas:
-    "above above above"
-    "left center right";
-  gap: 1.563rem;
-  margin: 0.625rem;
-}
-.grid-item {
-  display: flex;
-  justify-content: center;
-  margin-top: 0.5rem;
-}
+/*************************************************************************************/
 
 /* Este es el cartelito que dice "conocé nuestras opciones"*/
 .above {
@@ -266,10 +283,35 @@ nav label {
     grid-template-columns: 0.5fr;
   }
 
-  .above h2 {
-    font-size: 1.5rem;
+ .above h2 {
+    font-size: 2rem;
   }
 }
+
+
+/*contenido de la página en donde estan las ilustraciones*/
+.grid-container {
+  display: grid;
+  grid-template: 4.25rem 15rem / 0.8fr 0.8fr 0.8fr;
+  grid-template-areas:
+    "above above above"
+    "left center right";
+  gap: 1.563rem;
+  margin: 0.625rem;
+}
+.grid-item {
+  display: flex;
+  justify-content: center;
+  
+  margin-top: 0.5rem;
+}
+.grid-item img{
+  width:15rem;
+  align-items: center;
+  border:0.063rem solid #000000;
+  border-radius: 0.625rem;
+}
+
 
 
 /*estilos de la ilustracion de la izquierda*/
@@ -284,6 +326,7 @@ nav label {
   text-shadow: #f5f5f5 0.1em 0.1em 0.1em;
   box-shadow: 0.425rem 0.213rem 0.213rem #ffffff60;
   border-radius: 0.625rem;
+   
   cursor: pointer;
   transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
 }
@@ -341,6 +384,7 @@ nav label {
   transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
 }
 
+
 .right:hover {
   background-image: linear-gradient(
     76.3deg,
@@ -355,7 +399,10 @@ nav label {
   .grid-container {
     grid-template-columns: 1fr;
     display: block;
-  }
+    width: 70%;
+    margin: 0 auto;
+    }
+    
 
   h2 {
     font-size: 1.5rem;
@@ -398,6 +445,8 @@ nav label {
 .wifi-icon {
   rotate: 90deg;
 }
+
+
 /***********************************************************************************************/
 
 /*cartelito de descarga de la app*/
@@ -444,10 +493,110 @@ nav label {
 .grid-sim img {
   border-radius: 1.875rem;
   border:0.063rem solid #000000;
-  
-}
-/****************************************************************************************/
+  }
 
+/*queries pantallas pequeñas*/
+  @media screen and (max-width: 600px) {
+    .grid-advert {
+    grid-template-columns: 1fr;
+    height: auto;
+    }
+    .grid-advert h1 {
+    font-size: 5rem;
+    }
+    .grid-advert h2 {
+    font-size: 2rem;
+    }
+    
+    .grid-app {
+    grid-template-columns: 1fr;
+    height: auto;
+    }
+    .grid-app img {
+    margin-right: 0;
+    margin-bottom: 1rem;
+    }
+    
+    .grid-sim {
+    grid-template-columns: 1fr;
+    height: auto;
+    }
+    .grid-sim img {
+    margin-right: 0;
+    margin-bottom: 1rem;
+    }
+
+    }
+    /*queries pantallas medianas*/
+    @media screen and (min-width: 600px) and (max-width: 1024px) {
+    .grid-advert {
+    grid-template-columns: 1fr 1fr ;
+    height: auto;
+    }
+    .grid-advert h1 {
+    font-size: 6rem;
+    }
+    .grid-advert h2 {
+    font-size: 2.5rem;
+    }
+    .grid-advert img{
+  width:80%;
+
+    }
+    
+    .grid-app {
+    grid-template-columns: 1fr;
+    height: auto;
+    }
+    .grid-app img {
+    margin-right: 0;
+    margin-bottom: 1rem;
+    width: 30%
+    }
+    
+    .grid-sim {
+    grid-template-columns: 1fr;
+    height: auto;
+    }
+    .grid-sim img {
+    margin-right: 0;
+    margin-bottom: 1rem;
+    
+    }
+    }
+    
+     @media only screen and (min-width: 1025px) {
+    .grid-advert {
+    grid-template-columns: 1fr 1fr auto;
+    height: 25rem;
+    }
+    .grid-advert h1 {
+    font-size: 8rem;
+    }
+    .grid-advert h2 {
+    font-size: 3rem;
+    }
+    
+    .grid-app {
+    grid-template-columns: 1fr auto auto;
+    height: 15.625rem;
+    }
+    .grid-app img {
+    margin-right: 2rem;
+    margin-bottom: 0;
+    }
+    
+    .grid-sim {
+    grid-template-columns: 1fr auto auto;
+    height: 15.625rem;
+    }
+    .grid-sim img {
+    margin-right: 2rem;
+    margin-bottom: 0;
+    } 
+  }
+    
+/****************************************************************************************/
 /*contenedor del footer*/
 .footContainer {
   background: #141e30;
@@ -519,26 +668,27 @@ footer {
 .app {
   margin-top: 4rem;
 }
+
 /*queries para pantallas pequeñas*/
-@media only screen and (max-width: 768px) {
+ @media only screen and (max-width: 600px) {
   .footContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 1.875rem 0.625rem;
+    padding: 1.875rem 0.5rem;
   }
 
   .group1 {
     text-align: center;
-    margin-bottom: 1.25rem;
+    margin-bottom: 0.5rem;
   }
 
   .group1 img {
     width: 100%;
     max-width: 18.75rem;
     height: auto;
-    margin-bottom: 1.25rem;
+    margin-bottom: 0.5rem;
   }
 
   .group2,
@@ -547,76 +697,79 @@ footer {
   .group5 {
     width: 100%;
     text-align: center;
-    margin-bottom: 1.25rem;
+    margin-bottom: 0.3rem;
   }
 
   .group5 .app {
-    margin-top: 1.25rem;
+    margin-top: 1rem;
   }
 
   .group5 .qrCode {
-    text-align: center;
-    margin-top: 1.25rem;
+    display:none;
   }
 
   .line {
-    margin: 1.875rem 0;
+    margin: 1rem 0;
   }
 
   .copyright {
     text-align: center;
   }
 }
+
+/*Queries para pantallas medianas*/
+ @media only screen and (min-width: 600px) and (max-width: 1024px) {
+.footContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px;
+  
+}
+
+.group1 {
+  width: 50%;
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.group1 img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.group2,.group3,.group4,.group5 {
+  width: calc((100% - 60px) / 3);
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.group5 .app {
+  margin-top: 20px;
+}
+
+.group5 .qrCode {
+  display: none;
+}
+
+.line {
+  margin: 20px 0;
+}
+
+.copyright {
+  text-align: center;
+}  
+ }
+
+
+
+
+
 
 /****************************************************************************************/
 
-/*Ajuste de los media queries sin terminar/*
 
-/*@media only screen and (min-width: 600px) {
-  /* estilos para pantallas medianas */
-/* .footContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 30px;
-  }
-  
-  .col1 {
-    width: 50%;
-    text-align: left;
-    margin-bottom: 0;
-  }
-  
-  .col1 img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    margin-bottom: 20px;
-  }
-  
-  .col2,.col3,.col4,.col5 {
-    width: calc((100% - 40px) / 3);
-    text-align: left;
-    margin-bottom: 0;
-  }
-  
-  .col5 .app {
-    margin-top: 20px;
-  }
-  
-  .col5 .qrCode {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .line {
-    margin: 30px 0;
-  }
-  
-  .copyright {
-    text-align: center;
-  }
-}
 
-  */
