--- a/assets/css/styles_form2.css
+++ b/assets/css/styles_form2.css
@@ -6,6 +6,8 @@
 
 body{
     background-image: linear-gradient(to right, #434343 0%, black 100%);
+    font-family: Arial, sans-serif;
+	
     }
 
     header {
