--- a/assets/css/styles_plan.css
+++ b/assets/css/styles_plan.css
@@ -74,8 +74,9 @@ header nav ul li a:hover {
 }
 
 header .hero {
+	
 	max-width: 800px;
-	margin: 50px auto 0;
+	margin: 20px auto 0;
 	text-align: center;
 }
 
@@ -96,11 +97,44 @@ header .hero .btn {
 	border-radius: 5px;
 }
 
+@media only screen and (max-width: 600px) {
+	header {
+	  text-align: center;
+	}
+	
+	ul {
+	  display: flex;
+	  flex-direction: column;
+	  align-items: center;
+	  padding: 0;
+	}
+	
+	li {
+	  margin-bottom: 10px;
+	}
+	
+	.hero {
+	  text-align: center;
+	  padding: 20px;
+	}
+	
+	.hero h1 {
+	  font-size: 24px;
+	  margin-bottom: 10px;
+	}
+	
+	.hero p {
+	  font-size: 14px;
+	}
+  }
+ 
+  
+
 /* Main section */
 
 main {
 	padding: 50px 0;
-	background-image: linear-gradient(76.3deg, #2c3e4e 12.6%, #456783 82.8%);
+	background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
 section.plans {
@@ -187,14 +221,13 @@ footer {
 	background: #141e30;
 	background: -webkit-linear-gradient(to right, #243b55e9, #141e30);
 	background: linear-gradient(to right, #243b55ea, #141e30);
-	color: #ffffff;
-	color: #fff;
+    color: #fff;
 	padding: 50px 0;
 }
 
 footer h4 {
 	font-size: 1.5rem;
-	margin-bottom: 50px;
+	margin-bottom: 10px;
 	text-align: center;
 }
 
@@ -208,5 +241,6 @@ footer input[type="text"] {
 	padding: 10px;
 	font-size: 1.5rem;
 	border-radius: 5px;
-	margin-bottom: 20
+	margin-bottom: 10px
 }
+
