--- a/assets/css/styles_plan.css
+++ b/assets/css/styles_plan.css
@@ -8,8 +8,8 @@
 
 body {
 	font-family: Arial, sans-serif;
+	background-image: linear-gradient(to right, #434343 0%, black 100%);
 	
-
 }
 
 a {
@@ -30,88 +30,136 @@ ul {
 /* Header section */
 
 header {
-	align-items: center;
-	background: #0f0c29;
-	background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
-	background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-	color: #00ffff;
-	
-	padding: 20px 0;
 	position: sticky;
 	top: 0;
+	left: 0;
 	z-index: 100;
+	background-image: linear-gradient(to right, #434343 0%, #000000 100%);
+   
+  }
+  nav {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	display: flex;
+	width: 100%;
+	height: 6.5rem; 
+	justify-content: space-around;
+	align-items: center;
+	padding: 0 1.25rem;
+	background: #0f0c29;
+	background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+	background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  
+	font-size: 1.2rem;
+	color: #00ffff;
+	box-shadow: 0.625rem 0.313rem 0.313rem #000000;
+  }
+  ul {
+	display: flex;
+	margin: 0rem;
+	padding: 6.25rem;
+  }
+  
+  ul li {
+	list-style: none;
+	margin: 0 1.563rem;
+  }
+  
+  ul li a {
+	color: #00ffff;
+	text-decoration: none;
+  }
+  
+  ul li a:hover {
+	color: #ffffff;
+	background-color:#267ab22c;
+	border-radius: 5px;
+	}
 	
+  /*logo Codo-Net*/
+.logo {
+margin-left:-8rem;
+width: 20rem;
 }
 
-header nav {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	
+nav input[type="checkbox"] {
+display: none;
+}
+
+nav label {
+display: none;
+cursor: pointer;
+}
+
+.hero {
+	width: 100%;
+	margin: 20px auto auto;
+	text-align: center;
 	background: #0f0c29;
 	background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
 	background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
 	color: #00ffff;
-	box-shadow: 0.625rem 0.313rem 0.313rem #000000;
-   
-}
-
-header nav ul {
-	display: flex;
-	flex-direction: row;
-}
-
-header nav li {
-	margin-right: 20px;
-}
-
-header nav a {
-	padding: 5px 10px;
-	border-radius: 5px;
-}
-header nav ul li a:hover {
-	color: #ffffff;
-}
-
-header .hero {
+	padding:20px
 	
-	max-width: 800px;
-	margin: 20px auto 0;
-	text-align: center;
+
 }
 
-header .hero h1 {
+.hero h1 {
 	font-size: 3rem;
 	margin-bottom: 20px;
 }
 
-header .hero p {
+.hero p {
 	font-size: 1.5rem;
-	margin-bottom: 30px;
+	
 }
 
-header .hero .btn {
-	background-color: #00a0df;
-	color: #fff;
-	padding: 10px 20px;
-	border-radius: 5px;
-}
 
-@media only screen and (max-width: 600px) {
+
+@media only screen and (max-width: 768px) {
 	header {
 	  text-align: center;
 	}
-	
-	ul {
-	  display: flex;
-	  flex-direction: column;
-	  align-items: center;
-	  padding: 0;
-	}
-	
 	li {
 	  margin-bottom: 10px;
 	}
+	nav ul {
+		display: none;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		background: #0f0c29;
+		background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+		background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+		padding: 1rem;
+		box-shadow: 0 0.125rem 0.313rem #00000033;
+	  }
+	input[type="checkbox"]:checked ~ ul {
+		display: flex;
+		flex-direction: column;
+	  }
+	
+	  nav label {
+		display: block;
+		font-size: 2rem;
+		cursor: pointer;
+		position: absolute;
+		top: 1rem;
+		right: 1rem;
+		z-index: 1;
+	  }
+	
+	/*barras del menú hamburguesa que ahora son visibles*/
+	  .fa-bars {
+		display: block;
+	  }
+	   /*La animacion slide, ahora es rápida*/
+  .slide{
+    animation-duration: .1s;
+    animation-name: slidein;
+  }
+    
 	
 	.hero {
 	  text-align: center;
@@ -133,8 +181,8 @@ header .hero .btn {
 /* Main section */
 
 main {
-	padding: 50px 0;
-	background-image: linear-gradient(to right, #434343 0%, black 100%);
+	
+background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
 section.plans {
@@ -183,21 +231,25 @@ section.plans .plan .btn {
 }
 
 section.services {
-	background-color: #00dbde;
-	background-color: #00dbde;
-	background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+	background-image: linear-gradient(to right, #434343 0%, black 100%);
 	padding: 50px 0;
-	text-align: center;
 	
 }
 
 section.services h2 {
 	font-size: 2.5rem;
 	margin-bottom: 50px;
+	text-align: center;
+	color:#ffffff
 }
 
 section.services .service {
-	margin-bottom: 50px;
+	background-color: #00dbde;
+	background-color: #00dbde;
+	background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+	border: 1px solid #ddd;
+	padding: 30px;
+	text-align: center;
 }
 
 section.services .service i {
@@ -214,10 +266,83 @@ section.services .service p {
 	font-size: 1.5rem;
 	margin-bottom: 20px;
 }
+/*lottery section*/
+.lottery{
+color:white;
+text-align: center;
+align-items: center;
+
+}
+.lottery h3{
+	font-size: 2rem;
+	text-shadow: 0 0 30px #fff;
+	box-shadow: 0 0 20px #7fffd4;
+    border-radius: 100px;
+}
+.btn {
+	margin-top: 4rem;
+	background-color: #d90dd9;
+	color: #fff;
+	padding: 10px 20px;
+	text-decoration: none;
+	border-radius: 5px;
+  }
+  .btn:hover {
+	background-color: #0082c8;
+  }
+
+  .grid-iframe {
+	border:1px solid white;
+	padding:30px 0;
+	margin-top: 5rem;
+	margin-bottom: 1rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr; 
+	
+	text-align: center;
+	color: #ffffff;
+	
+  }
+  .grid-iframe h1{
+	font-size: 2rem;
+	text-shadow:0.025em 0.025em 0.025em aquamarine;
+  }
+  .grid-iframe h2{
+	text-shadow:0.025em 0.025em 0.025em aquamarine;
+
+  }
+  .map {
+	box-shadow:0 0 10px 0 #7fffd4;
+  }
+  /* Estilos para pantallas medianas */
+  @media only screen and (max-width: 900px) {
+	.grid-iframe {
+	 grid-template-columns: 1fr;
+   }
+ }
+ 
+ /* Estilos para pantallas pequeñas */
+ @media only screen and (max-width: 600px) {
+   .grid-iframe {
+	 grid-gap: 20px;
+   }
+   .grid-iframe h1{
+	 font-size:1.6rem;
+   }
+   .map {
+	 width: 80%;
+	 height: 200px;
+   }
+   .lottery h3{
+	font-size: 1.6rem;
+   }
+ }
+
 
 /* Footer section */
 
 footer {
+	margin-top: 1rem;
 	background: #141e30;
 	background: -webkit-linear-gradient(to right, #243b55e9, #141e30);
 	background: linear-gradient(to right, #243b55ea, #141e30);
@@ -230,17 +355,9 @@ footer h4 {
 	margin-bottom: 10px;
 	text-align: center;
 }
-
-footer label {
-	display: block;
-	font-size: 1.5rem;
-	margin-bottom: 10px;
+footer p{
+	text-align: center;
 }
 
-footer input[type="text"] {
-	padding: 10px;
-	font-size: 1.5rem;
-	border-radius: 5px;
-	margin-bottom: 10px
-}
+
 
